--- a/_site.yml
+++ b/_site.yml
@@ -6,5 +6,5 @@ navbar:
       href: index.html
     - text: "Case Study 1"
       href: TT_CaseStudy1.html
-      text: "Case Study 2"
+    - text: "Case Study 2"
       href: Tamas_Toth_MSDS_6306_CaseStudy2.html
